# hardware

./: .env  .gitignore  CONTRIBUTING.md  README.md  build.py  conda_requirements.txt  config.py  environment.yml  exhaust_manifolds.ipynb  exhaust_manifolds_v3_passenger.stl  exhaust_manifolds_v4_driver.stl  exhaust_manifolds_v4_driver_left.stl  exhaust_manifolds_v4_driver_right.stl  exhaust_manifolds_v4_passenger.stl  exhaust_manifolds_v4_passenger_left.stl  exhaust_manifolds_v4_passenger_right.stl  out.env  pathfinder.py  pyproject.toml  requirements.txt
.github/: release-drafter.yml
.github/workflows/: ci-gate.yml  ci.yml  license-compliance.yml  nightly.yml  release.yml
exhaust_manifolds.egg-info/: PKG-INFO  SOURCES.txt
scripts/: license_compliance.py
src/: __init__.py  build.py  config.py  exhaust_manifolds.ipynb  list.py  model.py  pathfinder.py  shell.py  smoke.py  target_parser.py  urdf_template.xml  urdf_template.yaml  view.py
src/model/: __init__.py  app_config.py  boundary.py  boundary_config.py  diagram_options.py  fluid_config.py  fluid_motor.py  tube_config.py  utils.py  wiring.py
src/models/: __init__.py  app_config.py  diagram_options.py  text_args.py  utils.py
src/projects/: __init__.py  cat_fountain.md  (+11 more)
tests/: test_build.py  test_build_main.py  test_config.py  test_config_main.py  test_logger.py  test_main.py  test_model.py  test_orchestrator.py  test_pathfinder.py  test_provider.py  test_provider_manager.py  test_provider_router.py  test_tube.py  test_viewer.py  tests_pathfinder.py
tools/: batch_pathfinder.sh  pathfinder_variants.txt
(+77 files in other folders)
